# ChangeLog for media-sound/darksnow
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/darksnow/ChangeLog,v 1.1 2004/10/19 05:26:20 chriswhite Exp $

*darksnow-0.4.4 (19 Oct 2004)

  19 Oct 2004; Chris White <chriswhite@gentoo.org> +metadata.xml,
  +darksnow-0.4.4.ebuild:
  Initial import to the tree. Closes bug #48057. Thanks to scout@scoutheeten.com
  ("scout" in the forum) for the ebuild.
