@@ -1,4 +1,4 @@
-MD5 f177f2d4dadc6bbe05258d87cc2b59af darksnow-0.4.4.ebuild 977
+MD5 f83b562607e348fde7975667f9169806 darksnow-0.4.4.ebuild 895
 MD5 dbafe0153b3ee5f599d5dbeac4aa3210 metadata.xml 224
-MD5 cbfce40039e890dedc716ac8dea2e0cd ChangeLog 463
+MD5 87ba956da3c717f1cd41a65854d7c5b4 ChangeLog 562
 MD5 0648bf168b7cdfc3363612992c5d0b51 files/digest-darksnow-0.4.4 65
