@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/darksnow
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/darksnow/ChangeLog,v 1.1 2004/10/19 05:26:20 chriswhite Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/darksnow/ChangeLog,v 1.2 2004/10/19 05:56:39 chriswhite Exp $
+
+  19 Oct 2004; Chris White <chriswhite@gentoo.org> darksnow-0.4.4.ebuild:
+  Fixed some QA issues.
 
 *darksnow-0.4.4 (19 Oct 2004)
 
